--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -92,27 +92,27 @@
   }
 
   h1 {
-    @apply text-title-h1;
+    @apply text-h1;
   }
 
   h2 {
-    @apply text-title-h2;
+    @apply text-h2;
   }
 
   h3 {
-    @apply text-title-h3;
+    @apply text-h3;
   }
 
   h4 {
-    @apply text-title-h4;
+    @apply text-h4;
   }
 
   h5 {
-    @apply text-title-h5;
+    @apply text-h5;
   }
 
   h6 {
-    @apply text-title-h6;
+    @apply text-h6;
   }
 
   input::-webkit-outer-spin-button,
@@ -127,7 +127,7 @@
 
 @layer components {
   /* text specific */
-  .text-title-h1 {
+  .text-h1 {
     @apply overflow-anywhere
       font-heading
       text-4xl
@@ -135,7 +135,7 @@
       md:text-5xl
       xl:text-6xl;
   }
-  .text-title-h2 {
+  .text-h2 {
     @apply overflow-anywhere
       font-heading
       text-3xl
@@ -143,7 +143,7 @@
       md:text-4xl
       xl:text-5xl;
   }
-  .text-title-h3 {
+  .text-h3 {
     @apply overflow-anywhere
       font-heading
       text-2xl
@@ -151,7 +151,7 @@
       md:text-3xl
       xl:text-4xl;
   }
-  .text-title-h4 {
+  .text-h4 {
     @apply overflow-anywhere
       font-heading
       text-xl
@@ -159,14 +159,14 @@
       md:text-2xl
       xl:text-3xl;
   }
-  .text-title-h5 {
+  .text-h5 {
     @apply overflow-anywhere
       font-heading
       text-base
       font-bold
       md:text-lg;
   }
-  .text-title-h6 {
+  .text-h6 {
     @apply overflow-anywhere
       font-heading
       text-sm
