chore: remove gray from tailwind custom color to allow for default tw gray classes

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -21,8 +21,7 @@
   --off-black: #101010;
   --dark-gray: #484848;
   --medium-dark-gray: #707070;
-  --medium-gray: #989898;
-  --gray: #c0c0c0;
+  --medium-gray: #c0c0c0;
   --light-gray: #e8e8e8;
   --off-white: #f9f9f9;
   --white: #ffffff;
