feature(Theme): Adds Blue CSS, our Logo, hides Color Swatches

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -26,7 +26,7 @@
   --neutral-lighter: #d4d4d4;
   --neutral-lightest: #f9f9f9;
   --white: #ffffff;
-  --overlay: rgba(0,0,0,0.3);
+  --overlay: rgba(0, 0, 0, 0.3);
 
   --primary-btn-bg-color: #008464;
   --primary-btn-border-color: #008464;
