--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -242,17 +242,17 @@
     @apply overflow-anywhere
       font-heading
       font-medium    
-      text-2xl            
-      md:text-3xl
-      xl:text-4xl;
+      text-xl            
+      md:text-xl
+      xl:text-xl;
   }
   .text-h4 {
     @apply overflow-anywhere
       font-heading
-      font-medium
+      font-light
       text-xl  
-      md:text-2xl
-      xl:text-3xl;
+      md:text-xl
+      xl:text-xl;
   }
   .text-h5 {
     @apply overflow-anywhere
